display game over page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 		</div>
 	</header>
 	<div id="game-board">
+		<!-- <div class="game-board_game-over">
+			<h1 class="game-board_game-over_text">Game over</h1>
+			<div class="game-board_game-over_btn">Try Again</div>
+		</div> -->
 	</div>
 	<div id="rule" class="rule-area">
 		<p><span class="text_bold">HOW TO PLAY:</span> Use your <span class="text_bold">arrow keys</span>
@@ -39,3 +43,7 @@
 	</div>
 </body>
 </html>
+
+
+<!-- make game over page -->
+<!-- make reset function -->
