handle init btn

--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
 					<h2 class="score-block_number">6500</h2>
 				</div>
 			</div>
-			<div class="new-game_btn">New Game</div>
+			<div id="new-game_btn" class="new-game_btn">New Game</div>
 		</div>
 	</header>
 	<div id="game-board">
-		<!-- <div class="game-board_game-over">
-			<h1 class="game-board_game-over_text">Game over</h1>
-			<div class="game-board_game-over_btn">Try Again</div>
-		</div> -->
 	</div>
 	<div id="rule" class="rule-area">
 		<p><span class="text_bold">HOW TO PLAY:</span> Use your <span class="text_bold">arrow keys</span>
@@ -44,6 +40,3 @@
 </body>
 </html>
 
-
-<!-- make game over page -->
-<!-- make reset function -->
