update score board

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 			<div class="score-area">
 				<div class="score-block">
 					<h3 class="score-block_title">Score</h3>
-					<h2 class="score-block_number">0</h2>
+					<h2 id="current-score" class="score-block_number"></h2>
 				</div>
 				<div class="score-block">
 					<h3 class="score-block_title">Best</h3>
-					<h2 class="score-block_number">6500</h2>
+					<h2 id="best-score" class="score-block_number"></h2>
 				</div>
 			</div>
 			<div id="new-game_btn" class="new-game_btn">New Game</div>
